<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Acitivity.MainActivity">

    <Button
        android:id="@+id/btnShowToast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/show_toast"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/edtUserMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnShowToast"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/enter_msg"
        android:inputType="textPersonName"
        android:textSize="25dp" />

    <Button
        android:id="@+id/btnSendMsgToActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/send_msg_next_act"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btnShareToOtherApps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSendMsgToActivity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/share_app"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/btnRecyclerViewDemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/recycler_demo"
        android:textAllCaps="true" />


</RelativeLayout>